--- a/Bài1.htm
+++ b/Bài1.htm
@@ -11,6 +11,7 @@
 <body>
     <button type="button" onclick="get1()">Click</button>
     <p id="result1"></p>
+    <script src="moment.js"></script>
     <script src="Task5.js"></script>
 </body>
 
